// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`iirActions should call RESET_DISPLAY_STATE 1`] = `
Object {
  "type": "RESET_DISPLAY_STATE",
}
`;

exports[`iirActions should call RESET_STATE 1`] = `
Object {
  "type": "RESET_STATE",
}
`;

exports[`iirActions should call SET_WORK_ORDER and include work order object 1`] = `
Object {
  "resp": Object {
    "workOrderSearch": "string",
    "workOrderSearchLineItem": "string",
  },
  "type": "SET_WORK_ORDER",
}
`;

exports[`iirActions should call TOGGLE_DISPLAY_OPEN_PDF_BTN 1`] = `
Object {
  "type": "TOGGLE_DISPLAY_OPEN_PDF_BTN",
}
`;

exports[`iirActions should call TOGGLE_IIR_EDIT_STATE 1`] = `
Object {
  "type": "TOGGLE_IIR_EDIT_STATE",
}
`;

exports[`iirActions should call TOGGLE_LOADING_SCREEN_DISPLAY_OFF 1`] = `
Object {
  "type": "TOGGLE_LOADING_SCREEN_DISPLAY_OFF",
}
`;

exports[`iirActions should call TOGGLE_LOADING_SCREEN_DISPLAY_ON 1`] = `
Object {
  "type": "TOGGLE_LOADING_SCREEN_DISPLAY_ON",
}
`;

exports[`iirActions should call TOGGLE_PDF_DISPLAY 1`] = `
Object {
  "type": "TOGGLE_PDF_DISPLAY",
}
`;

exports[`iirActions should call TOGGLE_POST_IIR_NOTES 1`] = `
Object {
  "type": "SET_POST_IIR_NOTES",
}
`;

exports[`iirActions should call TOGGLE_SEND_EMAIL_OFF 1`] = `
Object {
  "type": "TOGGLE_SEND_EMAIL_OFF",
}
`;

exports[`iirActions should call TOGGLE_SEND_EMAIL_ON 1`] = `
Object {
  "type": "TOGGLE_SEND_EMAIL_ON",
}
`;

exports[`iirActions should call TOGGLE_SUCCESS_UPDATE_MODAL_OFF 1`] = `
Object {
  "type": "TOGGLE_SUCCESS_UPDATE_MODAL_OFF",
}
`;

exports[`iirActions should call TOGGLE_SUCCESS_UPDATE_MODAL_ON 1`] = `
Object {
  "type": "TOGGLE_SUCCESS_UPDATE_MODAL_ON",
}
`;

exports[`iirActions should set the workOrderData data state 1`] = `
Object {
  "resp": Object {
    "Cert_type_Description": "string",
    "CustomerName": "string",
    "CustomerNumber": "string",
    "CustomerOrderNumber": "string",
    "DateIssuedYYMMDD": "string",
    "ItemNumber": "string",
    "Manual_Combined": "string",
    "OrderType": "string",
    "PartDescription": "string",
    "PartNumber": "string",
    "Quantity": 1,
    "SalesOrderAndLineNumber": "string",
    "SalesOrderNumber": "string",
    "SerialNumber": "string",
    "TSN": 0,
    "TSO": 0,
    "TSR": 0,
    "Trv_Num": "string",
    "Warrenty_Y_N": "N",
    "Work_Order_Number": "string",
    "customerReasonForRemoval": "NONE",
    "evalFindings": "NONE",
    "genConditionReceived": "NONE",
    "workedPerformed": "NONE",
  },
  "type": "SET_WORK_ORDER_DATA",
}
`;
